Pulpifier/style.css
html, body {
  margin: 0px;
  padding: 0px;
}
body {
  --vwUnit: 1vw;
  --vhUnit: 1vh;
}
#app {
  position: relative;
  font-family: "Noto Serif", serif;
  line-height: 1.4;
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  align-self: center;
  --vnFontSize: 1.5;
  --vnDialogueFontWeight: 600;
  --vnLineHeight: 1.4;
  --vnFontSizeReally: 1.05em;
}
#pulp {
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: #f0ddb6;
  z-index: 0;
  overflow: hidden;
}
#pulp:nth-child(2) {
  z-index: 1;
}
#back {
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  position: absolute;
  top: 0px;
  left: 0px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
#foot {
  width: 102%;
  font-size: calc(var(--vnFontSize) * var(--vhUnit));
  min-height: 15em;
  display: flex;
  position: absolute;
  bottom: 1em;
  justify-content: center;
  left: -1%;
}
#text {
  font-size: 2em;
  width: 40em;
  position: relative;
  color: black;
}
#text > div {
  width: 100%;
  height: 100%;
  background-color: #f8efd4f0;
  display: flow-root;
  font-size: var(--vnFontSizeReally);
  line-height: var(--vnLineHeight);
}
#text h1, #text h2, #text h3, #text h4, #text h5, #text h6 {
  text-align: center;
  margin: 0.25em 0px;
}
#text hr {
  margin: 1em auto;
  max-width: 200px;
}
#foot > div:first-child {
  width: 21em;
  background: linear-gradient(to left, #f8efd4f0, #f8efd4f0 1em, #f8efd445 20em, transparent 21em);
  display: flex;
  justify-content: end;
}
.speaker-back {
  width: 100%;
  height: 100%;
  background-position: 48% 1%;
  background-size: 40em;
  mask-image: linear-gradient(265deg, #c2121200, #c2121247 1em, black 2em), linear-gradient(to left, transparent, black 1em);
  mask-composite: intersect;
  max-width: 20em;
}
#foot > div:last-child {
  flex-grow: 1;
  background: linear-gradient(to right, #f8efd4f0, #f8efd4f0 1em, #f8efd445 20em, transparent 21em);
  max-width: 21em;
  min-width: var(--vwUnit);
}
b.speaker {
  position: absolute;
  top: -2em;
  left: -0.75em;
  padding: 0.25em 0.75em;
  min-width: 2em;
  text-align: center;
  background: linear-gradient(to right, transparent 0, #f8efd4f0 0.5em, #f8efd4f0 calc(100% - 0.5em), transparent 100%);
  font-size: var(--vnFontSizeReally);
}
b.speaker + div > span.d {
  font-weight: var(--vnDialogueFontWeight);
}
p.e {
  margin: 0.25em;
  font-size: 0.8em;
}
.characters {
  width: 100%;
  height: 100%;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
}
.characters > img {
  position: absolute;
  transform: translateX(-50%);
  bottom: -45%;
  height: 130%;
  user-select: none;
}
.characters > img.f {
  transform: translateX(-50%) scaleX(-1);
}
img.p-1\/6 { left: calc(100% * 1/6); }
img.p-2\/6, img.p-1\/3 { left: calc(100% * 2/6); }
img.p-3\/6, img.p-2\/4, img.p-1\/2 { left: 50%; }
img.p-4\/6, img.p-2\/3 { left: calc(100% * 4/6); }
img.p-5\/6 { left: calc(100% * 5/6); }
img.p-1\/5 { left: 20%; }
img.p-2\/5 { left: 40%; }
img.p-3\/5 { left: 60%; }
img.p-4\/5 { left: 80%; }
img.p-1\/4 { left: 25%; }
img.p-3\/4 { left: 75%; }
#pulp > img.c {
  position: absolute;
  transform: translate(-50%, 0%);
  top: calc(8 * var(--vhUnit));
  left: calc(50 * var(--vwUnit));
  height: calc(60 * var(--vhUnit));
  filter: opacity(96%);
  box-shadow: 0 0 20px black;
}
.upper {
  font-variant: small-caps;
}
.uppercase {
  text-transform: uppercase;
}
.center {
  text-align: center;
}
.big {
  font-size: 1.2em;
}

